--- a/package.json
+++ b/package.json
@@ -3,14 +3,16 @@
   "version": "0.1.0",
   "main": "dist/connection.js",
   "dependencies": {
-    "node-uuid": "^1.4.7",
-    "q": "^1.4.1"
+    "node-uuid": "^1.4.7"
   },
   "devDependencies": {
     "@types/node": "^6.0.45",
     "@types/node-uuid": "0.0.28",
     "@types/q": "0.0.32",
     "typescript": "^2.0.3"
+  },
+  "peerDependencies": {
+    "q": "^1.4.1"
   },
   "scripts": {
     "install": "cd src && tsc && cd .."
