--- a/package.json
+++ b/package.json
@@ -6,11 +6,10 @@
     "@types/node": "^6.0.45",
     "@types/node-uuid": "0.0.28",
     "@types/q": "0.0.32",
-    "node-uuid": "^1.4.7"
-  },
-  "devDependencies": {
+    "node-uuid": "^1.4.7",
     "typescript": "^2.0.3"
   },
+  "devDependencies": {},
   "peerDependencies": {
     "q": "^1.4.1"
   },
