--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "@types/node-uuid": "0.0.28",
     "@types/q": "0.0.32",
     "node-uuid": "^1.4.7",
-    "typescript": "^2.0.3"
+    "typescript": "~2.0.3"
   },
   "devDependencies": {},
   "peerDependencies": {
